--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -14,10 +14,11 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/use_profile_image"
+        android:id="@+id/user_profile_image"
         android:layout_width="98dp"
         android:layout_height="89dp"
         android:src="@drawable/profile"
+        android:layout_gravity="center"
         app:civ_border_color="@android:color/white"
         app:civ_border_width="2dp" />
 
@@ -28,6 +29,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:gravity="center"
         android:text="user name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
