--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -11,7 +11,7 @@
             android:title="Cart" />
         <item
             android:id="@+id/nav_orders"
-            android:icon="@drawable/cart"
+            android:icon="@drawable/orders"
             android:title="Orders"
             android:iconTint="@android:color/white"
             />
