--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -52,16 +52,14 @@
     </android.support.design.widget.AppBarLayout>
 
 
-
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/settings_profile_image"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:src="@drawable/profile"
         android:layout_below="@+id/app_bar_settings"
-        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginTop="24dp"
+        android:src="@drawable/profile" />
 
     <TextView
         android:id="@+id/profile_image_change_btn"
