--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -66,20 +66,22 @@
     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_product_to_cart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="6dp"
-        android:backgroundTint="@android:color/white"
-        android:src="@drawable/cart"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="15dp"
+<Button
+    android:id="@+id/pd_add_to_cart_button"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:layout_margin="15dp"
+    android:layout_alignParentBottom="true"
+    android:text="Add to Cart"
+    android:textColor="@android:color/white"
+    android:textSize="18sp"
+
+    />
 
 
 
-        />
+
 
 
 
