--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#BF007A</color>
-    <color name="colorPrimaryDark">#BF007A</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#009688 </color>
+    <color name="colorPrimaryDark">#35a79c</color>
+    <color name="colorAccent">#83d0c9</color>
 </resources>
