--- a/app/src/main/res/layout/activity_confirm_final_order.xml
+++ b/app/src/main/res/layout/activity_confirm_final_order.xml
@@ -9,8 +9,8 @@
         android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Please write your Shipment Details"
-        android:textSize="25sp"
+        android:text="Please confirm your Shipment Details"
+        android:textSize="25dp"
         android:textColor="@color/colorPrimaryDark"
         android:layout_margin="15dp"
         android:textAlignment="center"
@@ -25,7 +25,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="your name"
+        android:hint="Your Name"
 
 
         />
@@ -37,7 +37,7 @@
     android:layout_marginTop="60dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    android:hint="your phone number"
+    android:hint="Your Phone Number"
         android:inputType="number"
         />
     />
@@ -49,7 +49,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="your Home Adress"
+        android:hint="Your Home Adress"
         />
     <EditText
         android:id="@+id/shippment_city"
@@ -59,7 +59,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="your City Name"
+        android:hint="Your City Name"
         />
     <Button
         android:id="@+id/confirm_final_order_btn"
