--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -15,16 +15,18 @@
         android:layout_alignParentTop="true">
 
 
-        <TextView
+     <!--  <TextView
             android:id="@+id/total_price"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+
             android:text="Total Price="
             android:textColor="@android:color/white"
             android:textSize="20dp"
             android:textAlignment="center"
             android:layout_marginTop="10dp"
       />
+     -->
 
 
     </RelativeLayout>
