--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -9,33 +9,35 @@
             android:icon="@drawable/cart"
             android:iconTint="@android:color/white"
             android:title="Cart" />
-        <item
+     <!--   <item
             android:id="@+id/nav_orders"
             android:icon="@drawable/orders"
             android:title="Orders"
             android:iconTint="@android:color/white"
             />
-        <item
-            android:id="@+id/nav_categories"
-            android:icon="@drawable/category"
-            android:title="Categories"
-            android:iconTint="@android:color/white"
-            />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Settings"
+            -->
+        <!--    <item
+               android:id="@+id/nav_categories"
+               android:icon="@drawable/category"
+               android:title="Categories"
+               android:iconTint="@android:color/white"
+               />
+                -->
+           <item
+               android:id="@+id/nav_settings"
+               android:icon="@drawable/ic_menu_manage"
+               android:title="Settings"
 
-            android:iconTint="@android:color/white"
-            />
-        <item
-            android:id="@+id/nav_logout"
-            android:icon="@drawable/logout"
-            android:title="Logout"
-            android:iconTint="@android:color/white"
-            />
-    </group>
+               android:iconTint="@android:color/white"
+               />
+           <item
+               android:id="@+id/nav_logout"
+               android:icon="@drawable/logout"
+               android:title="Logout"
+               android:iconTint="@android:color/white"
+               />
+       </group>
 
 
 
-</menu>
+   </menu>
